<resources>
    <string name="app_name">Пассажир</string>
    <string name="unknow_error">Неизвестная ошибка</string>
    <string name="internet_error">Подключите интернет</string>
    <string name="typeYourPhone">Type your phone</string>
    <string name="google_play_services_version">AIzaSyDUwhlpulPNHCtw2iYVHQnF6tLd3k-Egsw</string>
    <string name="form_label">Напишите ваш адрес</string>
    <string name="to_label">Напишите куда поедим</string>
    <string name="time_label">Time</string>
    <string name="make_order_label">Сделать заказ</string>
    <string name="done_order_label">Завершить заказ</string>
    <string name="empty_order">Все поля должны быть заполнены</string>
    <string name="changeNumber">Change number</string>
    <string name="you_are_have_order">Вы еще не завершили предыдущий заказ</string>
    <string name="connection_error">Подключите интернет</string>
    <string name="done_order_button">После поездки нажмите кнопку \"Завершить заказ\".</string>
    <string name="make_order">Нажмите: \"Сделать заказ\".</string>
</resources>
