<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MapsActivity" />

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/makeOrder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@android:color/holo_red_light"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/make_order_label" />

        <TextView
            android:id="@+id/doneOrder"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:background="@android:color/holo_red_light"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/done_order_label" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/orderView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="20dp"
        android:visibility="gone">

        <EditText
            android:id="@+id/fromET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_label"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/toET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/to_label"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/timeTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="false"
            android:hint="@string/time_label"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/sendOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/make_order_label"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/orders"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/buttons"
        android:orientation="vertical"
        android:background="@android:color/white"
        android:visibility="gone">

        <ListView
            android:id="@+id/orderListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp" />
    </LinearLayout>
</RelativeLayout>